add offset_next and offset_previous
Instead of search through next or previous URL to find the offset,
we return offset_next and offset_previous
